--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 $premery-color: #E8AC5F;
 $second-color: #fff;
-$fird-color: #161617;
+$third-color: #161617;
 $first-font: 'Josefin Sans', sans-serif;
 $second-font: 'Rubik', sans-serif;
 
@@ -29,10 +29,14 @@ body, html{
     margin-left: 0px;
     margin-right: 0px;
     padding: 0;
-    height: 100vh;
+    height: 110vh;
     .card-top{
         width: 100%;
         height: 80px;
+        position: fixed;
+        top: -80px;
+        transform: translateY(80px);
+        z-index: 11111;
         .card-top-content{
             display: flex;
             height: 100%;
@@ -48,26 +52,87 @@ body, html{
             .menu-container{
                 height: auto;
                 padding: 0;
-                ul{
+                position: relative;
+                #check{
+                  display: none;
+                }
+                label #btn, label #cancel{
+                  position: absolute;
+                  cursor: pointer;
+                  padding: 6px 9px;
+                  color: $second-color;
+                  display: none;
+                }
+                label #btn{
+                    &:hover{
+                        color: $premery-color;
+                    }
+                    transition: all .2s;
+                    right: 0px;
+                    bottom: 0;
+                    font-size: 25px;
+                }
+                label #cancel{
+                    &:hover{
+                        color: $premery-color;
+                    }
+                    transition: all .5s;
+                    font-size: 25px;
+                    right: 0;
+                    bottom: 0;
+                    color: $second-color;
+                    z-index: 11111111;
+                    opacity: 0;
+                }
+                ul.menu-ul {
                     list-style: none;
-                    display: flex;
-                    margin-right: 0;
-                    margin-left: auto;
-                    margin-bottom: 0;
-                    width: auto;
                     padding: 0;
-                    justify-content: end;
-                    li{
-                        list-style-type: none;
-                        margin-right: 10px;
-                        margin-left: 10px;
+                    li.menu {
+                        float: right;
+                        position: relative;
+                        &:hover{
+                        .submenu{
+                            display: inline-block;
+                            position: absolute;
+                            top: 100%;
+                            left: 0px;
+                            z-index: 1000;
+                        }
+                        }
                         a{
                             text-decoration: none;
                             color: $second-color;
+                            display: inline-block;
+                            font-size: 15px;
+                            margin-right: 5px;
+                            padding: 10px 15px 10px 15px;
                             font-family: $second-font;
-                            font-size: 14px;
+                            transition: all 0.2s ease-in-out;
+                            &:hover{
+                                color: $premery-color;
+                        }
                         }
                     }
+                    .submenu{
+                        display: none;
+                        padding: 0;
+                        list-style: none;
+                        background-color: $third-color;
+                        li a{
+                            padding: 15px 30px;
+                            font-size: 13px;
+                            width: 200px;
+                            transition: color 0.2s ease-in-out;
+                            &:hover{
+                                color: $premery-color;
+                            }
+                        }
+                    }
+                }
+                ul.menu-ul::after{
+                  content: "";
+                  display: table;
+                  clear: both;
                 }
             }
         }
@@ -100,7 +165,7 @@ body, html{
                 }
             }
             .social-card{
-                background-color: rgba($fird-color ,0.2);
+                background-color: rgba($third-color ,0.2);
                 padding: 8px 20px;
                 border-radius: 50px;
                 ul{
@@ -138,7 +203,8 @@ body, html{
     padding-bottom: 50px;
     box-sizing: border-box;
     height: auto;
-    background-color: $fird-color;
+    background-color: $third-color;
+    position: relative;
     .bio-section-content{
         line-height: 20px;
         .block-img{
@@ -209,7 +275,14 @@ body, html{
             }
         }
     }
-    z-index: 2;
+    .wave {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 1px;
+        fill: $third-color;
+        transform: rotate(180deg) translateY(100%);
+    }
 }
 
 /*
@@ -222,7 +295,8 @@ body, html{
     background-color: #0F0F0F;
     text-align: center;
     overflow: hidden;
-    padding: 50px 0px;
+    padding: 80px 0px;
+    position: relative;
     h2{
         font-size: 70px;
         font-weight: 800;
@@ -237,7 +311,7 @@ body, html{
         width: 100%;
         height: 100%;
         .card{
-            color: $fird-color;
+            color: $third-color;
             border: 0;
             background: transparent;
             margin-bottom: 20px;
@@ -274,17 +348,25 @@ body, html{
             }
         }
     }
+    .wave {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: -1px;
+        fill: $third-color;
+
+    }
 }
 /*
 ===========================================================================================
 4. Portfolio Section
 ===========================================================================================
 */
-.portfolio-section.col-12{padding: 50px 0px;}
+.portfolio-section.col-12{padding: 80px 0px;}
 .portfolio-section{
     text-align: center;
     box-sizing: border-box;
-    background-color: $fird-color;
+    background-color: $third-color;
     .portfolio-section-content{
         h2{
             font-size: 70px;
@@ -335,6 +417,13 @@ body, html{
             }
         }
     }
+    .wave {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: -1px;
+        fill: #0F0F0F;
+    }
 }
 
 /*
@@ -347,6 +436,8 @@ body, html{
     text-align: center;
     overflow: hidden;
     padding-bottom: 50px;
+    padding-top: 40px;
+    position: relative;
     h2{
         font-size: 70px;
         font-weight: 800;
@@ -374,7 +465,7 @@ body, html{
                 img{
                     filter: blur(0px);
                     -webkit-filter: blur(0px);
-                    transform: scale(1.2) rotate(10deg);
+                    transform: scale(1.1) rotate(5deg);
                 }
                 a{
                     margin-bottom: 0;
@@ -429,6 +520,13 @@ body, html{
             }
         }
     }
+    .wave {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: -1px;
+        fill: #161617;
+    }
 }
 
 /*
@@ -437,8 +535,9 @@ body, html{
 ===========================================================================================
 */
 .contact-section{
-    padding: 50px 0px;
-    background-color: $fird-color;
+    padding: 80px 0px;
+    background-color: $third-color;
+    position: relative;
     h2{
         font-size: 70px;
         font-weight: 800;
@@ -452,6 +551,7 @@ body, html{
     }
     .reference-card{
         position: relative;
+        margin-bottom: 20px;
         h6{
             color: $premery-color;
             letter-spacing: 2px;
@@ -566,6 +666,13 @@ body, html{
         .butn-bg:hover span {
             color: #c49b66;
         }
+    }
+    .wave {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: -1px;
+        fill: #0F0F0F;
     }
 }
 /*
@@ -759,7 +866,7 @@ section.slide.col-lg-12{
         font-weight: 600;
     }
     p{
-        color: $fird-color;
+        color: $third-color;
         font-size: 16px;
         line-height: 30px;
         font-family: $second-font;
@@ -776,7 +883,7 @@ section.slide.col-lg-12{
 */
 .archive-section.col-lg-12{padding: 35px 45px 35px 45px;}
 .archive-section-content{
-color: $fird-color;
+color: $third-color;
 .card{
     border: 0;
     padding: 30px;
@@ -800,7 +907,7 @@ color: $fird-color;
         padding-left: 0px;
         a{
         text-decoration: none;
-        color: $fird-color;
+        color: $third-color;
         font-size: 20px;
         font-weight: 500;
         font-family: $first-font;
@@ -859,6 +966,71 @@ header{
 }
 /* screen resolution <= 992 */
 @media screen and (max-width: 992px){
+    
+    .header-container.row {
+        .card-top{
+            .card-top-content{
+                .menu-container{
+                    #check:checked ~ ul.menu-ul{
+                        transform: scaleY(1);
+                    }
+                    label #btn, label #cancel{
+                        display: block;
+                    }
+                    #check:checked ~ label #btn{
+                        pointer-events: none;
+                        opacity: 0;
+                    }
+                    #check:checked ~ label #cancel{
+                        opacity: 1;
+                        z-index: 888888;
+                    }
+                    ul.menu-ul{
+                        position: fixed;
+                        top: 80px;
+                        right: 10%;
+                        width: 80%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: start;
+                        background: $third-color;
+                        height: auto;
+                        transition: all .2s;
+                        text-align: center;
+                        transform: scaleY(0);
+                        transform-origin: top center;
+                        z-index: 555;
+                        li.menu {
+                            &:hover{
+                                .submenu{
+                                    display: inline-block;
+                                    position: static;
+                                    top: 100%;
+                                    left: 0px;
+                                    z-index: 1000;
+                                }
+                            }
+                            a {
+                                color: $second-color;
+                                padding: 0;
+                                margin-right: 0;
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                    a {
+                        display: block;
+                        height: 100%;
+                        width: 100%;
+                        line-height: 60px;
+                        font-size: 20px;
+                        box-sizing: border-box;
+                        transition: all 0.2s;
+                    }
+                }
+            }
+        }
+    }
     .bio-section{
         .bio-section-content{
             .block-img{
@@ -938,6 +1110,13 @@ header{
     .bio-section.col-lg-12,.portfolio-section.col-lg-12,.service-section.col-lg-12,footer.col-lg-12,.archive-section.col-lg-12{ 
         padding: 40px 0px;
     }
+    .header-container.row .middle-card .middle-card-content h1 {
+        font-size: 40px;
+        text-align: center;
+    }
+    .header-container.row .middle-card .middle-card-content h2 {
+        font-size: 50px;
+    }
     .bio-section{
         .bio-section-content{
             .block-img{
@@ -953,20 +1132,24 @@ header{
         }
     }
     .service-section.col-12 h2,
-    .portfolio-section .portfolio-section-content h2
+    .portfolio-section .portfolio-section-content h2,
+    .contact-section h2
     {
         font-size: 50px;
     }
     .blog-section{
         h2{
-            height:50px;
+            font-size:50px;
         }
         .card{
-            height: 300px;
+            height: 340px;
             .card-content{
                 img{
-                    min-height: 100%;
-                    width: auto;
+                    max-width: 100%;
+                    height: auto;
+                }
+                .text-card{
+                    justify-content: center;
                 }
             }
         }
@@ -974,18 +1157,37 @@ header{
     .blog-section .card .text-card h3 {
         font-size: 20px;
     }
-    
-.archive-section-content{
-    .card{
-    padding: 0;
+    .contact-section .reference-card .social ul li a {
+        padding: 10px;
+        font-size: 15px;
+    }
+    .archive-section-content{
+        .card{
+        padding: 0;
+        }
+    }
+    .page-container.row{
+        /*
+        6.1 Haeder
+        */
+        header{
+            padding: 0 30px 0 30px;
+        }
     }
 }
-.page-container.row{
-    /*
-    6.1 Haeder
-    */
-    header{
-    padding: 0 30px 0 30px;
+@media screen and (max-width: 430px){
+    .blog-section{
+        .card{
+            height: 200px;
+            .card-content{
+                img{
+                    max-width: 100%;
+                    height: auto;
+                }
+                .text-card{
+                    justify-content: center;
+                }
+            }
+        }
     }
-}
 }
