finish template base

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body, html {
   overflow-x: hidden; }
 
+a.active {
+  color: #E8AC5F; }
+
 /*
 ===========================================================================================
 1. header
